syntax = "proto3";

package proto;

// 引入另外一个文件的pb。google/protobuf/wrappers.proto是google内置的类型
import "google/protobuf/wrappers.proto";

option go_package = "model/;pb";

message Order4 {
  string id = 1;
  repeated string items = 2;
  string description = 3;
  float price = 4;
  string destination = 5;
}

message CombinedShipment {
  string id = 1;
  string status = 2;
  repeated Order4 orderList = 3;
}

service OrderManagement4 {
  rpc processOrders(stream google.protobuf.StringValue)
      returns (stream CombinedShipment);
}